# PythonWeb_mod_12

./: main.py  middleware.py  pyproject.toml
src/database/: db.py  init_db.py
src/entity/: models.py  modelsss.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/schemas/: contacts.py
src/services/: auth.py
