[tool.poetry]
name = "modul-11"
version = "0.1.0"
description = ""
authors = ["OleksandrSkuz1 <138138803+OleksandrSkuz1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.5.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.7.1"}
alembic = "^1.13.1"
faker = "^25.2.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
